--- a/src/styles.css
+++ b/src/styles.css
@@ -321,8 +321,8 @@ main {
 }
 
 #ignore-challenge {
-  background-color: #E0E0E0;
-  color: var(--text-color);
+  background-color: #000000;
+  color: white;
   padding: 0.6rem 1rem;
   min-width: 150px;
 }
